--- a/mean_fullstack/init/public/index.html
+++ b/mean_fullstack/init/public/index.html
@@ -13,5 +13,7 @@
     <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
     <script type="text/javascript" src="js/application/module.js"></script>
+
+    <script type="text/javascript" src="js/services/event.service.js"></script>
   </body>
 </html>
