feat(controller): implement both page controllers

--- a/mean_fullstack/init/public/index.html
+++ b/mean_fullstack/init/public/index.html
@@ -15,5 +15,7 @@
     <script type="text/javascript" src="js/application/module.js"></script>
 
     <script type="text/javascript" src="js/services/event.service.js"></script>
+    <script type="text/javascript" src="js/controllers/listing.controller.js"></script>
+    <script type="text/javascript" src="js/controllers/create.controller.js"></script>
   </body>
 </html>
